--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.html
@@ -117,7 +117,7 @@
             mat-sort-header
             class="table__cell"
           >
-            TALLER
+            Taller
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.taller ? element.taller : "---" }}
@@ -173,7 +173,7 @@
             mat-sort-header
             class="table__cell"
           >
-            FECHA APERTURA CHILD
+            Fecha apertura CHILD
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
@@ -191,7 +191,7 @@
             mat-sort-header
             class="table__cell"
           >
-            COMPONENTE
+            Componente
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.componente ? element.componente : "---" }}
@@ -205,7 +205,7 @@
             mat-sort-header
             class="table__cell"
           >
-            MODELO
+            Modelo
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.modelo ? element.modelo : "---" }}
@@ -219,7 +219,7 @@
             mat-sort-header
             class="table__cell"
           >
-            SERVICIO
+            Servicio
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.servicio ? element.servicio : "---" }}
@@ -233,7 +233,7 @@
             mat-sort-header
             class="table__cell"
           >
-            FECHA ULTIMO ENVIO PPTO
+            Fecha último envío PPTO
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
@@ -251,7 +251,7 @@
             mat-sort-header
             class="table__cell"
           >
-            NO PPTO's MODIFICADOS/ADICIONALES
+            PPTOs adicionales
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
@@ -269,7 +269,7 @@
             mat-sort-header
             class="table__cell"
           >
-            $ COMPONENTE NUEVO
+            $ Comp. nuevo
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.$componenteNuevo ? element.$componenteNuevo : "---" }}
@@ -283,7 +283,7 @@
             mat-sort-header
             class="table__cell"
           >
-            TOTAL VV PPTO US$
+            Total VV PPTO US$
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.totalvvPPTOUS$ ? element.totalvvPPTOUS$ : "---" }}
@@ -297,7 +297,7 @@
             mat-sort-header
             class="table__cell"
           >
-            % REPARACION (60%)
+            % Repar. (60%)
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{ element.reparacion60 ? element.reparacion60 : "---" }}
@@ -333,7 +333,9 @@
           </th>
           <td mat-cell *matCellDef="let element" class="table__cell">
             {{
-              element.motivoDeModificacion ? element.motivoDeModificacion.length : '---'
+              element.motivoDeModificacion
+                ? element.motivoDeModificacion.length
+                : "---"
             }}
           </td>
         </ng-container>
