--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/budgets-pending-approval.component.scss
@@ -24,11 +24,7 @@
 
 .ms-kanban-toolbar__input {
   margin-right: 12px;
-}
-
-.matMenu{
-  height:203x;
-  weight: 173x;
+  width: 150px;
 }
 
 .download {
@@ -44,8 +40,9 @@ table {
   margin-top: 1.5em;
   border: 1px solid #f1eeee;
   .table__cell {
-    min-width: 90px;
+    min-width: 100px;
     padding: 0px 8px;
+    font-size: 14px;
     &:first-child {
       padding-left: 36px;
     }
