--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/budgets-pending-send.component.scss
@@ -24,6 +24,7 @@
 
 .ms-kanban-toolbar__input {
   margin-right: 12px;
+  width: 150px;
 }
 
 .download {
@@ -39,8 +40,9 @@ table {
   margin-top: 1.5em;
   border: 1px solid #f1eeee;
   .table__cell {
-    min-width: 90px;
+    min-width: 100px;
     padding: 0px 8px;
+    font-size: 14px;
     &:first-child {
       padding-left: 36px;
     }
