--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -314,7 +314,7 @@
                         MOTIVO DE MODIFICACION 02
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.motivoDeModificacion02 ? element.motivoDeModificacion02 : "---" }}
+                        {{ element.motivoDeModificacion02 ? element.motivoDeModificacion02.name : "---" }}
                     </td>
                 </ng-container>
 
@@ -323,7 +323,7 @@
                         DETALLE DE MODIFICACION 02
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.detalleDeModificacion02 ? element.detalleDeModificacion02 : "---" }}
+                        {{ element.detalleDeModificacion02 ? element.detalleDeModificacion02.description : "---" }}
                     </td>
                 </ng-container>
 
@@ -341,7 +341,7 @@
                         MOTIVO DE MODIFICACION 03
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.motivoDeModificacion03 ? element.motivoDeModificacion03 : "---" }}
+                        {{ element.motivoDeModificacion03 ? element.motivoDeModificacion03.name : "---" }}
                     </td>
                 </ng-container>
 
@@ -350,7 +350,7 @@
                         DETALLE DE MODIFICACION 03
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.detalleDeModificacion03 ? element.detalleDeModificacion03 : "---" }}
+                        {{ element.detalleDeModificacion03 ? element.detalleDeModificacion03.description : "---" }}
                     </td>
                 </ng-container>
 
@@ -368,7 +368,7 @@
                         MOTIVO DE MODIFICACION 04
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.motivoDeModificacion04 ? element.motivoDeModificacion04 : "---" }}
+                        {{ element.motivoDeModificacion04 ? element.motivoDeModificacion04.name : "---" }}
                     </td>
                 </ng-container>
 
@@ -377,7 +377,7 @@
                         DETALLE DE MODIFICACION 04
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.detalleDeModificacion04 ? element.detalleDeModificacion04 : "---" }}
+                        {{ element.detalleDeModificacion04 ? element.detalleDeModificacion04.description : "---" }}
                     </td>
                 </ng-container>
 
@@ -386,7 +386,7 @@
                         FECHA DE APROBACION/RECHAZO
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.fechaDeAprobacionORechazo ? (element.fechaDeAprobacionORechazo.toDate() | date: "d/M/y") : "---" }}
+                        {{ element.fechaDeAprobacionORechazo ? (element.fechaDeAprobacionORechazo.seconds*1000 | date : 'dd/MM/yy hh:mm:ss') : "---" }}
                     </td>
                 </ng-container>
 
@@ -553,7 +553,7 @@
                         DIAS RESTANTES ENVIO PPTO
                     </th>
                     <td mat-cell *matCellDef="let element" class="table__cell">
-                        {{ element.diasRestantesEnvioPPTO ? element.diasRestantesEnvioPPTO : "---" }}
+                        {{daysLeft(element)}}
                     </td>
                 </ng-container>
 
