--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.html
@@ -26,7 +26,8 @@
                 </div>
                 <div *ngIf="item.description">
                     <div class="row">
-                        <div class="col col--date"> Motivo de modificación</div>
+
+                        <div class="col col--date"><img class="flecha" src="../../../../../../../../assets/img/flecha.png" alt=""> Motivo de modificación</div>
                         <div class="col col--date">{{item.description}}</div>
                     </div>
                 </div>
