--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.scss
@@ -38,3 +38,10 @@
             }
         }
     }
+    
+    .flecha {
+        height: 58px;
+        width: 33px;
+        margin-top: -40px;
+        margin-right: 14px;
+    }
