--- a/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/budgets-summary.component.html
@@ -340,7 +340,7 @@
                   <mat-icon>attach_email</mat-icon>
                   Enviar PPTO
                 </button>
-                                <button *ngIf="element.statusPresupuesto != 'CLIENTE INTERNO'" class="w3-small" mat-menu-item (click)="timelineDialog(element)">
+                                <button class="w3-small" mat-menu-item (click)="timelineDialog(element)">
                   <mat-icon>timeline</mat-icon>
                   Historial
                 </button>
