--- a/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-timeline-dialog/pending-send-timeline-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-send/dialogs/pending-send-timeline-dialog/pending-send-timeline-dialog.component.html
@@ -1,139 +1,35 @@
-<div class="container">
-  <div class="ms-dialog-header">
+<div class="ms-dialog-header">
     <mat-icon class="ms-dialog-header__icon">timeline</mat-icon>
     <h3 class="ms-dialog-header__title">Historial</h3>
     <span class="ms-fill"></span>
     <button mat-icon-button mat-dialog-close>
-      <mat-icon>cancel</mat-icon>
-    </button>
-  </div>
-  <mat-divider></mat-divider>
-
-  <mat-dialog-content class="main">
-    <div class="row">
-      <div class="col col--title">Estado</div>
-      <div class="col col--title">Fecha</div>
-      <div class="col col--title">Usuario</div>
-    </div>
-    <div *ngIf="lastListDate != '---'" class="row">
-      <div class="col col--state">Fecha último listado</div>
-      <div class="col col--date">{{ lastListDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="lastADMDocumentSentDate != '---'" class="row">
-      <div class="col col--state">Fecha último envío dcto (ADM)</div>
-      <div class="col col--date">{{ lastADMDocumentSentDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="definitionOfChargesDate != '---'" class="row">
-      <div class="col col--state">Fecha defin. cargos</div>
-      <div class="col col--date">{{ definitionOfChargesDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="lastBudgetSentDate != '---'" class="row">
-      <div class="col col--state">Fecha último envío PPTO</div>
-      <div class="col col--date">{{ lastBudgetSentDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div class="row">
-      <div class="col col--state">PPTO Adicionales</div>
-      <div class="col col--date"></div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div class="row">
-      <div class="col col--state">Actualizacion de presupuesto</div>
-      <div class="col col--date"></div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="approvedOrRejectedDate != '---'" class="row">
-      <div class="col col--state">Fecha aprob. o rechazo</div>
-      <div class="col col--date">{{ approvedOrRejectedDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div class="row">
-      <div class="col col--state">Fecha de pase a fact.</div>
-      <div class="col col--date"></div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="lastInputDate != '---'" class="row">
-      <div class="col col--state">Fecha último Input</div>
-      <div class="col col--date">{{ lastInputDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="workshopBillingDate != '---'" class="row">
-      <div class="col col--state">Fecha de fact. Taller</div>
-      <div class="col col--date">{{ workshopBillingDate }}</div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="fisrtLabourDate != '---'" class="row">
-      <div class="col col--state">Fecha First Labour</div>
-      <div class="col col--date">
-        {{ fisrtLabourDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div *ngIf="lastLabourDate != '---'" class="row">
-      <div class="col col--state">Fecha Last Labour</div>
-      <div class="col col--date">
-        {{ lastLabourDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div
-      *ngIf="afaDocumentDate != ''"
-      class="row"
-    >
-      <div class="col col--state">Fecha AFA</div>
-      <div class="col col--date">
-        {{ afaDocumentDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div
-      *ngIf="summaryDocumentDate != 'PDTE'"
-      class="row"
-    >
-      <div class="col col--state">Fecha Resumen</div>
-      <div class="col col--date">
-        {{ summaryDocumentDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div
-      *ngIf="fesaDocumentDate != 'PDTE'"
-      class="row"
-    >
-      <div class="col col--state">Fecha FESA</div>
-      <div class="col col--date">
-        {{ fesaDocumentDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div
-      *ngIf="textDocumentDate != 'PDTE'"
-      class="row"
-    >
-      <div class="col col--state">Fecha TEXT</div>
-      <div class="col col--date">
-        {{ textDocumentDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-    <div
-      *ngIf=" reportDocumentDate != 'PDTE'"
-      class="row"
-    >
-      <div class="col col--state">Fecha REPORTE</div>
-      <div class="col col--date">
-        {{ reportDocumentDate }}
-      </div>
-      <div class="col col--user">Juan Perez Rodriguez</div>
-    </div>
-  </mat-dialog-content>
-
-  <mat-dialog-actions align="end">
-    <button type="button" mat-stroked-button color="warn" mat-dialog-close>
-      CERRAR
-    </button>
-  </mat-dialog-actions>
+    <mat-icon>cancel</mat-icon>
+  </button>
 </div>
+<mat-divider></mat-divider>
+
+<mat-dialog-content class="main">
+    <div class="row">
+        <div class="col col--title">Estado</div>
+        <div class="col col--title">Fecha</div>
+        <div class="col col--title">Usuario</div>
+    </div>
+
+    <div *ngFor="let item of dateArray">
+        <div class="row">
+            <div class="col col--state">{{ item.type }}</div>
+            <div class="col col--date">{{ item.date }}</div>
+            <div class="col col--user">
+                {{ item.createBy ? item.createBy.name : "---" }}
+            </div>
+        </div>
+        <div *ngIf="item.description">
+            <div class="row">
+                <div class="col col--date">
+                    <img class="flecha" src="../../../../../../../../assets/img/flecha.png" alt="" /> Motivo de modificación
+                </div>
+                <div class="col col--date">{{ item.description }}</div>
+            </div>
+        </div>
+    </div>
+</mat-dialog-content>
