--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-timeline-dialog/budgets-summary-timeline-dialog.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-timeline-dialog/budgets-summary-timeline-dialog.component.scss
@@ -45,3 +45,10 @@
     margin-top: -40px;
     margin-right: 14px;
 }
+
+.flecha1 {
+    height: 58px;
+    margin-top: -38px;
+    margin-right: 14px;
+    margin-left: -39px;
+}
