--- a/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.scss
+++ b/src/app/main/pages/budgets/budgets/budgets-pending-approval/dialogs/budgets-pending-history/budgets-pending-history.component.scss
@@ -1,47 +1,54 @@
 .main {
-  .row {
-    display: flex;
-    margin: 2.4em 0;
-    .col {
-      display: flex;
-      width: 220px;
-      &--title {
+    .row {
         display: flex;
-        justify-content: center;
-        font-weight: 500;
-        font-size: 18px;
-        letter-spacing: 0.15px;
-        color: #2b2b2b;
-      }
-      &--state {
-        font-weight: bold;
-        font-size: 16px;
-        letter-spacing: 0.15px;
-        color: #2b2b2b;
-      }
-      &--date {
-        display: flex;
-        justify-content: center;
-        font-weight: normal;
-        font-size: 14px;
-        letter-spacing: 0.25px;
-        color: #2b2b2b;
-      }
-      &--user {
-        display: flex;
-        justify-content: center;
-        font-weight: normal;
-        font-size: 14px;
-        letter-spacing: 0.25px;
-        color: #828282;
-      }
+        margin: 2.4em 0;
+        .col {
+            display: flex;
+            width: 220px;
+            &--title {
+                display: flex;
+                justify-content: center;
+                font-weight: 500;
+                font-size: 18px;
+                letter-spacing: 0.15px;
+                color: #2b2b2b;
+            }
+            &--state {
+                font-weight: bold;
+                font-size: 16px;
+                letter-spacing: 0.15px;
+                color: #2b2b2b;
+            }
+            &--date {
+                display: flex;
+                justify-content: center;
+                font-weight: normal;
+                font-size: 14px;
+                letter-spacing: 0.25px;
+                color: #2b2b2b;
+            }
+            &--user {
+                display: flex;
+                justify-content: center;
+                font-weight: normal;
+                font-size: 14px;
+                letter-spacing: 0.25px;
+                color: #828282;
+            }
+        }
     }
-  }
 }
 
 .flecha {
-  height: 58px;
-  width: 33px;
-  margin-top: -40px;
-  margin-right: 14px;
+    height: 58px;
+    width: 33px;
+    margin-top: -40px;
+    margin-right: 14px;
+}
+
+.flecha1 {
+    height: 58px;
+    margin-top: -38px;
+    margin-right: 14px;
+    margin-left: -39px;
 }
