--- a/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
+++ b/src/app/main/pages/budgets/budgets/budgets-summary/dialogs/budgets-summary-send-dialog/budgets-summary-send-dialog.component.html
@@ -8,7 +8,8 @@
     </button>
     </div>
     <mat-divider></mat-divider>
-
+    <mat-progress-bar mode="indeterminate" *ngIf="loading$ | async"></mat-progress-bar>
+    
     <mat-dialog-content>
         <div class="main--wrapper" [formGroup]="form">
             <div class="file--upload__wrapper">
